<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".MainActivity">
    
        <TextView
            android:id="@+id/nomeCompletoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_completo"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/nomeCompletoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/nomeCompletoTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/emailTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeCompletoEt"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/emailTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <CheckBox
            android:id="@+id/atualizacaoCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atualizacoes_oportunidades"
            app:layout_constraintTop_toBottomOf="@+id/emailEt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/telefoneTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/atualizacaoCb" />

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneTv" />

        <RadioGroup
            android:id="@+id/telefoneRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneEt" >

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residencial"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comercial" />

        </RadioGroup>

        <TextView
            android:id="@+id/adicionarCelularTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_celular"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneRg" />

        <Spinner
            android:id="@+id/celularSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/addCelular"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adicionarCelularTv" />

        <LinearLayout
            android:id="@+id/celularLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/celularSp" >

            <TextView
                android:id="@+id/celularTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone_celular"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/celularEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </LinearLayout>

        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celularLl" />

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/sexoTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino" />

        </RadioGroup>

        <TextView
            android:id="@+id/dataNascimentoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexoRg" />

        <EditText
            android:id="@+id/dataNascimentoEt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataNascimentoTv" />

        <TextView
            android:id="@+id/formacaoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formacao"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dataNascimentoEt" />

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacoes"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formacaoTv" />

        <LinearLayout
            android:id="@+id/tipoFormacao1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formacaoSp" >

            <TextView
                android:id="@+id/anoFormaturaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ano_de_formatura"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/anoFormaturaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tipoFormacao2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoFormacao1" >

            <TextView
                android:id="@+id/anoConclusaoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ano_de_conclusao"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/anoConclusaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <TextView
                android:id="@+id/instituicaoTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instituicao"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/instituicaoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tipoFormacao3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="5dp"
            android:layout_margin="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoFormacao2" >

            <TextView
                android:id="@+id/anoConclusao2Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ano_de_conclusao"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/anoConclusao2Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"/>

            <TextView
                android:id="@+id/instituicao2Tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instituicao"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/instituicao2Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/monografiaTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_de_monografia"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/monografiaEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/orintadorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientador"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/orientadorEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

        <TextView
            android:id="@+id/vagasInteresseTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vagas_de_interesse"
            android:textSize="20sp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoFormacao3" />

        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasInteresseTv" />

        <LinearLayout
            android:id="@+id/botoesLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vagasInteresseEt">

            <Button
                android:id="@+id/salvarBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/salvar" />

            <Button
                android:id="@+id/limparBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/limpar" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>